# Dynasty-Basketball-Model

./: .env.example  .gitignore  README.md  leagues.json  pyproject.toml  requirements.txt
.github/workflows/: daily-refresh.yml
data/: name_aliases.json
data/basketball_reference/: README.md  leaguedash_2024-25.json  leaguedash_2025-26.json
data/bridge/: ncaa_to_nba.json
data/career_arc/: README.md  comparables.json
data/diagnostics/: resolver_stats.json
data/draft_stock/: big_board.json
data/historical_nba/: README.md  league_1980-81.json  league_1981-82.json  league_1982-83.json  league_1983-84.json  league_1984-85.json  league_1985-86.json  league_1986-87.json  league_1987-88.json  league_1988-89.json  league_1989-90.json  league_1990-91.json  league_1991-92.json  league_1992-93.json  league_1993-94.json  league_1994-95.json  league_1995-96.json  league_1996-97.json  league_1997-98.json  league_1998-99.json  league_1999-00.json  league_2000-01.json  league_2001-02.json  league_2002-03.json  league_2003-04.json  league_2004-05.json  league_2005-06.json  (+19 more)
docs/: CHANGELOG-model.md  DRAFT-STOCK-PRIOR.md  NAME-RESOLVER.md  RESEARCH-sources.md  ROOKIE-SIMILARITY.md  SIMILARITY-METHODOLOGY.md
scripts/: backfill_historical_nba.py  backfill_historical_ncaa.py  prefetch_leagues.py  refresh_draft_stock.py
tests/: smoke_test.py  test_basketball_reference_parser.py  test_court_consensus_parser.py  test_darko_parser.py  test_draft_stock_prior.py  test_name_resolver.py  test_names.py  test_rookie_similarity.py  test_similarity.py  test_vecenie_csv.py
(+56 files in other folders)
