[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynasty-basketball-model"
version = "0.1.0"
description = "Dynasty fantasy basketball composite ranking model — multi-source blend with deterministic, backtested weighting."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "websockets>=12",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "scipy>=1.11",
    "python-dotenv>=1.0",
    "nba_api>=1.4",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["src"]
